fixed overlapping carousel button with navbar and adding guruStaff

--- a/css/style.css
+++ b/css/style.css
@@ -147,6 +147,7 @@ footer a:hover{
 }
 
 .carousel-inner {
+    z-index: -1;
     margin-top: 100px;
     /* width: 70%; */
     height: 700px;
@@ -155,6 +156,19 @@ footer a:hover{
     vertical-align: middle;
     
 }
+
+.carousel-indicators {
+    z-index: 0;
+}
+
+.carousel-control-prev {
+    z-index: 0;
+}
+
+.carousel-control-next {
+    z-index: 0;
+}
+
 
 .carousel-indicators li {
     background-color: #669966;
